sf-src/force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <label>Appointment</label>
    <nameField>
        <displayFormat>APT-{00000000}</displayFormat>
        <label>APT-{00000000}</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>