sf-src/force-app/main/default/objects/Appointment__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <label>Menu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>