sf-src/force-app/main/default/objects/Appointment__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>Staff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>