sf-src/force-app/main/default/objects/Appointment__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>